# bearhack-discord-bot

./: .env.local  README.md  pyproject.toml
.github/workflows/: pull-request.yaml
bot/: hello.py  main.py
